style.css
@import url("https://fonts.googleapis.com/css2?family=Audiowide&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Share+Tech+Mono&display=swap");

/* =============================================================================== */
/* Normalise */
/* =============================================================================== */

*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  line-height: 1.5;
}

a {
  text-decoration: none;
  color: initial;
}

img {
  display: block;
  max-width: 100%;
}

/* =============================================================================== */
/* Variables */
/* =============================================================================== */

:root {
  --special-font: "Playfair Display", serif;
  --main-font: "Roboto", sans-serif;

  --spacing-1: 8px;
  --spacing-2: 16px;
  --spacing-3: 32px;
  --spacing-4: 48px;
  --spacing-5: 64px;

  --backdrop: 0 5px 8px rgb(0,0,0,0.6)
}

/* =============================================================================== */
/* Main Styling */
/* =============================================================================== */

h1,
h2,
h3 {
  font-family: var(--special-font);
}

body {
  font-family: var(--main-font);
}

.full-page{
  display: flex;
  flex-direction: column;
  gap: var(--spacing-5);
}

.bg-img {
  position: relative;
}

.bg-img::before {
  display: block;
  content: " ";
  background-color: #5e7ac4;
  width: 100%;
  height: 400px;
  position: absolute;
  z-index: -1;
  transform: skewY(-14deg) translateY(-20%);
}


header {
  display: flex;
  flex-direction: column;
  padding: var(--spacing-3);
  gap: var(--spacing-5)
}

#user-card{
  position: relative;
  display: flex;
  flex-direction: column;
  max-width: 320px;
  box-shadow: var(--backdrop);
}

#portrait-img{
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  float: left;
}

#user-card h1 {
  position: absolute;
  bottom: 0;
  width: 100%;
  color: white;
  overflow-wrap: break-word;
  text-align: center;
  font-weight: 600;
}


#about-me-container {
  display: flex;
  flex-direction: column;
  gap: var(--spacing-2);
  align-items: center;
  
}

svg {
  width: 30px;
  height: auto;
  margin-right: 10px;
}

main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 30%;
}

.project-card {
  max-width: 100%;
  max-height: 600px;
  margin: 20px;
  box-shadow: 1px 4px 10px rgb(0, 0, 0, 0.5);
}

.project-card img {
  max-width: 100%;
  height: 300px;
  display: block;
  object-fit: cover;
}

.header-div {
  display: flex;
  justify-content: space-between;
  padding: 15px;
}

.header-div h2 {
  font-family: Playfiar Display;
}

.icon-container {
  display: flex;
  width: 30%;
}


.project-card p {
  font-size: 18px;
  padding: 0 8px 40px 10px;
}

.footer-bg {
  position: relative;
  margin-top: 40%;
}

.footer-bg::before {
  content: " ";
  display: block;
  background-color: #5e7ac4;
  width: 100%;
  height: 340px;
  position: absolute;
  z-index: -1;
}

footer {
  padding: 12px 0 0 18px;
  color: white;
}

footer h1 {
  text-align: center;
  font-family: Playfair Display;
  font-weight: 500;
}

footer p {
  margin: 10px 0 10px 0;
  font-family: Roboto;
}

#p1 {
  font-size: 18px;
  font-weight: 500;
}

.footer-icons {
  display: flex;
  justify-content: center;
  padding: 12px;
}

#footer-img {
  position: relative;
  margin-top: 10%;
  width: 100%;
  height: 400px;
}

#footer-img::after {
  content: "";
  position: absolute;
  inset: 0;
  background-image: url(https://img.freepik.com/premium-photo/vertical-portrait-modern-black-businessman-working-home-office-analyzing-documents_236854-38732.jpg);
  background-size: cover;
  background-position: center;
}

/* @media (min-width: 601px) and (max-width: 1000px) {
  .bg-img::before {
    height: 700px;
    transform: skewY(-14deg) translateY(-55%);
  }

  header {
    flex-direction: row;
    align-items: center;
    gap: 20px;
  }

  #photo-section {
    width: 40%;
  }

  #photo-section img {
    min-width: 240px;
    max-height: 100%;
    object-fit: cover;
    object-position: center;
  }

  #photo-section h1 {
    position: absolute;
    top: 10px;
    right: 10px;
  }

  #about-me {
    width: 60%;
    align-items: flex-start;
  }
} */

